@@ -3,7 +3,7 @@
 	Plugin Name: Download Monitor
 	Plugin URI: https://www.download-monitor.com
 	Description: A full solution for managing and selling downloadable files, monitoring downloads and outputting download links and file information on your WordPress powered site.
-	Version: 4.9.5
+	Version: 4.9.6
 	Author: WPChill
 	Author URI: https://wpchill.com
 	Requires at least: 5.5
@@ -78,7 +78,7 @@ if ( ! function_exists( 'dm_fs' ) ) {
 }
 
 // Define DLM Version
-define( 'DLM_VERSION', '4.9.5' );
+define( 'DLM_VERSION', '4.9.6' );
 define( 'DLM_UPGRADER_VERSION', '4.6.0' );
 
 // Define DLM FILE
